Added meta tags for search engines

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Meta tags for search engine-->
+    <meta name="description" content="Love Running. Club for runner sin Dublin, Ireland. Urban running, trail running. Dublin docklands and Pheonix Park"
     <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
