--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <!--Header of the page-->
     <header>Header</header>
     <!--Main Content-->
-    <p>Main Content</p>
+    <main>Main Content </main>
     <!--footer-->
     <footer>Footer</footer>
 </body>
