Added a link to facebook within the footer

--- a/index.html
+++ b/index.html
@@ -33,5 +33,9 @@
     <!--Main Content-->
     <main>Main Content </main>
     <!--footer-->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li href="https://www.facebook.com/" target="_blank" rel=""noopener" aria-label="visit our facebookpage(Opens a new tab)">Facebook</li>
+        </ul>
+    </footer>
 </body>
