Adjusted link to be correctly coded

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!--footer-->
     <footer>
         <ul>
-            <li href="https://www.facebook.com/" target="_blank" rel=""noopener" aria-label="visit our facebookpage(Opens a new tab)">Facebook</li>
+            <li><a href="https://www.facebook.com/" target="_blank" rel=""noopener" aria-label="visit our facebookpage(Opens a new tab)">Facebook</a></li>
         </ul>
     </footer>
 </body>
