Added a logo to the footer links

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
     <!--footer-->
     <footer>
         <ul>
-            <li><a href="https://www.facebook.com/" target="_blank" rel=""noopener" aria-label="visit our facebookpage(Opens a new tab)">Facebook</a></li>
+            <li><a href="https://www.facebook.com/" target="_blank" rel=""noopener" aria-label="visit our facebookpage(Opens a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="visit"><i class="fa-brands fa-twitter"></i></a></li>
         </ul>
     </footer>
+
+    <!--Font Awesome Kit-->
+    <script src="https://kit.fontawesome.com/31673c5b9a.js" crossorigin="anonymous"></script>
 </body>
