--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
                 <li><a class="active" href="">Home</a></li>
@@ -34,9 +34,11 @@
     <main>Main Content </main>
     <!--footer-->
     <footer>
-        <ul>
+        <ul class="links">
             <li><a href="https://www.facebook.com/" target="_blank" rel=""noopener" aria-label="visit our facebookpage(Opens a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
             <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="visit"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="visit"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="visit"><i class="fa-brands fa-instagram"></i></a></li>
         </ul>
     </footer>
 
