changed the color and size of the icons to make it match the rest of the website

--- a/index.html
+++ b/index.html
@@ -34,11 +34,25 @@
     <main>Main Content </main>
     <!--footer-->
     <footer>
-        <ul class="links">
-            <li><a href="https://www.facebook.com/" target="_blank" rel=""noopener" aria-label="visit our facebookpage(Opens a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="visit"><i class="fa-brands fa-twitter"></i></a></li>
-            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="visit"><i class="fa-brands fa-youtube"></i></a></li>
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="visit"><i class="fa-brands fa-instagram"></i></a></li>
+        <ul id="social-networks">
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel=""noopener" aria-label="visit our facebookpage(Opens a new tab)">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="visit">
+                    <i class="fa-brands fa-twitter"></i></a></li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="visit">
+                    <i class="fa-brands fa-youtube"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="visit">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </li>
         </ul>
     </footer>
 
