--- a/signup.html
+++ b/signup.html
@@ -25,9 +25,9 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
-                <li><a class="active" href="">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a class="active" href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
     </header>
