--- a/index.html
+++ b/index.html
@@ -39,6 +39,26 @@
                 <h3>Dublin Docklands & Pheonix park</h3>
             </div>
         </section>
+
+        <section id="reasons">
+            <h2>Why Love Running with us?</h2>
+            <div id="benefits">
+                <div id="benefits-physical">
+                    <div>
+                        <h3>Feel healthy</h3>
+                        <hr>
+                        <p>......</p>
+                    </div>
+                    <div>
+                        <h3>Feel Strong</h3>
+                        <hr>
+                        <p>......</p>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
     </main>
     <!--footer-->
     <footer>
