--- a/index.html
+++ b/index.html
@@ -45,14 +45,20 @@
             <div id="benefits">
                 <div id="benefits-physical">
                     <div>
-                        <h3>Feel healthy</h3>
+                        <h3>
+                            Feel healthy
+                            <i><i class="fa-solid fa-heart-pulse"></i></i>
+                        </h3>
                         <hr>
-                        <p>......</p>
+                        <p>Since it improves aerobic fitness, running is a great way to help improve your cardiovascular health. Plus, it burns calories and can build strength.</p>
                     </div>
                     <div>
-                        <h3>Feel Strong</h3>
+                        <h3>
+                            Feel Strong
+                            <i class="fa-solid fa-dumbbell"></i>
+                        </h3>
                         <hr>
-                        <p>......</p>
+                        <p>Running strengthens your heart by pumping blood more effectively through your body.</p>
                     </div>
 
                 </div>
