--- a/index.html
+++ b/index.html
@@ -60,7 +60,22 @@
                         <hr>
                         <p>Running strengthens your heart by pumping blood more effectively through your body.</p>
                     </div>
+                </div>
 
+                <div id="benefits-mental">
+                    <div>
+                        <h3>Feel Free</h3>
+                        <i class="fa-brands fa-fly"></i>
+                        <hr>
+                        <p>Physical exercise, running included, is known to release endorphins in the brain. Endorphins make you more energetic, more awake and, yes, happier.</p>
+                    </div>
+
+                    <div>
+                        <h3>Get Social</h3>
+                        <i class="fa-solid fa-globe"></i>
+                        <hr>
+                        <p>When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or low mood, and inspire you to try new events.</p>
+                    </div>
                 </div>
             </div>
 
