--- a/signup.html
+++ b/signup.html
@@ -32,7 +32,38 @@
         </nav>
     </header>
     <!--Main Content-->
-    <main>Main Content </main>
+    <main>
+        <section id="signup">
+            <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
+                <h2>
+                    <i class="fa-solid fa-heart-pulse"></i>
+                    Let's get you signed up!
+                </h2>
+                <label for = "first-name">First Name</label>
+                <input class="text-input" id="first-name" name="first-name" required>
+                <br>
+                <label for = "last-name">Last Name</label>
+                <input class="text-input" id="last-name" name="last-name" required>
+                <br>
+                <label for="email-address">Email Address</label>
+                <input class="text-input" id="email-address" name="email-address" type="email" required>
+                <br>
+                <div class="radio-buttons">  
+                    <div>
+                        <label for="road">Road</label>
+                        <input type="radio" id="road" name="running_preference" required>
+                    </div>
+                    <div>
+                        <label for="trail">Trail</label>
+                        <input type="radio" id="trail" name="running_preference">
+                    </div>
+                    <label for="both">Both</label>
+                    <input type="radio" id="both" name="running_preference">                    
+                </div>
+                <button type="submit" class="join-button">Lets Run!</button>
+            </form>
+        </section>
+    </main>
     <!--footer-->
     <footer>
         <ul id="social-networks">
