addded an image as the background of the sign up form

--- a/signup.html
+++ b/signup.html
@@ -57,8 +57,10 @@
                         <label for="trail">Trail</label>
                         <input type="radio" id="trail" name="running_preference">
                     </div>
-                    <label for="both">Both</label>
-                    <input type="radio" id="both" name="running_preference">                    
+                    <div>
+                        <label for="both">Both</label>
+                        <input type="radio" id="both" name="running_preference">  
+                    </div>                  
                 </div>
                 <button type="submit" class="join-button">Lets Run!</button>
             </form>
