adjusted the code due to syntax errors found on html code checker

--- a/index.html
+++ b/index.html
@@ -134,20 +134,20 @@
     <footer>
         <ul id="social-networks">
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel=""noopener" aria-label="visit our facebookpage(Opens a new tab)">
+                <a href="https://www.facebook.com/" target= "_blank" rel = "noopener" aria-label = "visit our facebookpage(Opens a new tab)">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="visit">
+                <a href="https://www.twitter.com/" target= "_blank" rel= "noopener" aria-label="visit">
                     <i class="fa-brands fa-twitter"></i></a></li>
             <li>
-                <a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="visit">
+                <a href="https://www.youtube.com/" target= "_blank" rel= "noopener" aria-label="visit">
                     <i class="fa-brands fa-youtube"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="visit">
+                <a href="https://www.instagram.com/" target= "_blank" rel= "noopener" aria-label="visit">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
             </li>
