added a hidden h2 element to gallery page as recommended by the html checker

--- a/gallery.html
+++ b/gallery.html
@@ -34,6 +34,7 @@
     <!--Main Content-->
     <main>
         <section id="images">
+            <h2 class="hidden-heading">Gallery</h2>
             <div id="photos">
                 <img src="assets/images/girls.webp" alt="Three girls at charity paint running festival">
                 <img src="assets/images/runner3.webp" alt="Solo male runner jogging on beach">
@@ -50,7 +51,7 @@
     <footer>
         <ul id="social-networks">
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel=""noopener" aria-label="visit our facebookpage(Opens a new tab)">
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="visit our facebookpage(Opens a new tab)">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
             </li>
