adjusted code for the signup page after checking it through html checker

--- a/signup.html
+++ b/signup.html
@@ -70,7 +70,7 @@
     <footer>
         <ul id="social-networks">
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel=""noopener" aria-label="visit our facebookpage(Opens a new tab)">
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="visit our facebookpage(Opens a new tab)">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
             </li>
